--- a/ex2 - Shahar Asher - 209305408.ipynb
+++ b/ex2 - Shahar Asher - 209305408.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:red\">**exercise 2**</span>\n",
+    "![Python logo](./python_logo.gif)\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 511,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +28,13 @@
    "source": [
     "## Q.1: Extracting values from a binary file\n",
     "- The function __dump_array_file__ reads the binary file and\n",
-    "extracts the values using struct.unpack .\n",
+    "extracts the values using __struct.unpack__ .\n",
     "It prints the extracted values in a readable format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 513,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 514,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 515,
    "metadata": {},
    "outputs": [
     {
