--- a/ex2 - Shahar Asher - 209305408.ipynb
+++ b/ex2 - Shahar Asher - 209305408.ipynb
@@ -10,15 +10,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### submited by:\n",
+    "- Name: Shahar Asher\n",
+    "- Id: 209305408\n",
+    "- Email adress: shaharas@edu.hac.ac.il\n",
+    "- Date: 12/04/2024\n",
+    "\n",
+    "### Operation system: Windows 11\n",
+    "### Python version: 3.11.5 (Using anaconda)\n",
+    "### IDE: Visual Studio Code\n",
+    "### External libraries: numpy, matplotlib\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
     "import struct\n",
     "import matplotlib.pyplot as plt\n",
-    "import struct\n",
     "import numpy as np"
    ]
   },
@@ -34,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dump_array_file(file_name:str)->None:\n",
+    "def dump_array_file(file_name:str)->tuple[tuple[float, float, int], tuple[float, float, int]]:\n",
     "    \"\"\"\n",
     "    Reads a binary file containing an array of structures and extracts the values.\n",
     "\n",
@@ -46,28 +62,29 @@
     "        file_name (str): The path to the binary file.\n",
     "\n",
     "    Returns:\n",
-    "        None\n",
+    "        tuple: A tuple containing two tuples. Each inner tuple contains three values extracted from the binary file:\n",
+    "               - First value: float\n",
+    "               - Second value: float\n",
+    "               - Third value: int\n",
     "\n",
     "    Example:\n",
     "        >>> dump_array_file(\"./f32_f32_i16.bin\")\n",
-    "        file content:\n",
-    "        (1.0, 2.0, 3)\n",
-    "        (4.0, 5.0, 6)\n",
+    "        ((1.0, 2.0, 3), (4.0, 5.0, 6))\n",
     "    \"\"\"\n",
+    "    re_1:tuple[float, float, int] = ()\n",
+    "    re_2:tuple[float, float, int] = ()\n",
     "    with open(file_name, \"rb\") as file:\n",
     "        bdata:bytes = file.read()\n",
     "        \n",
     "        re_1:tuple[float, float, int] = struct.unpack(\"ffh\", bdata[:10])\n",
     "        re_2:tuple[float, float, int] = struct.unpack(\"ffh\", bdata[10:])\n",
-    "\n",
-    "        print(f'file content:')\n",
-    "        print(re_1)\n",
-    "        print(re_2)"
+    "        \n",
+    "    return (re_1, re_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +98,8 @@
     }
    ],
    "source": [
-    "dump_array_file(\"./f32_f32_i16.bin\")"
+    "cont:tuple[tuple[float, float, int], tuple[float, float, int]] = dump_array_file(\"./f32_f32_i16.bin\")\n",
+    "print(f'file content:\\n{cont[0]}\\n{cont[1]}')"
    ]
   },
   {
@@ -97,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
