--- a/ex2 - Shahar Asher - 209305408.ipynb
+++ b/ex2 - Shahar Asher - 209305408.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,19 +135,23 @@
     "    \"\"\"\n",
     "    # Open the binary file\n",
     "    with open(file_name, \"rb\") as file:\n",
-    "        # read the first line of the file\n",
+    "        # read the first line of the file - for knowing the row & col\n",
     "        bdata:bytes = file.readline()\n",
+    "        row:int = struct.unpack(\"b\", bdata[1:2])[0]\n",
+    "        col:int = struct.unpack(\"b\", bdata[3:4])[0]\n",
+    "\n",
+    "        # Read the rest of the file containing image data\n",
     "        bdata:bytes = file.read()\n",
     "\n",
+    "        # Convert binary data into a list of lists representing the image\n",
     "        data:list = []\n",
-    "        for i in range(0, 14):\n",
+    "        for i in range(0, row):\n",
     "            dataTemp:list = []\n",
-    "            for j in range(0, 10):\n",
+    "            for j in range(0, col):\n",
     "                dataTemp.append(bdata[i*10+j])\n",
     "            data.append(dataTemp)\n",
     "\n",
-    "        # Convert the list to a numpy array and reshape it to the original image shape\n",
-    "        # Here, I'm assuming the image is square for simplicity.\n",
+    "        # Convert the list to a numpy array\n",
     "        img_np:np.ndarray = np.array(data)\n",
     "\n",
     "        # Display the image\n",
@@ -157,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
